--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset=utf 8>
     <title>My Portfolio Page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
@@ -46,10 +48,10 @@
         <section class="main-section">
             <hi>Portfolio</hi>
             <ul>
-                <li><img src="assets/images/webdev.png" class="auth-image" alt="Hangman"></li>
-                <li><img src="assets/images/node.png" class="auth-image" alt="RPG Game"></li>
-                <li><img src="assets/images/travel.png" class="auth-image" alt="Trivia Game"></li>
-                <li><img src="assets/images/hobbies.png" class="auth-image" alt="Rutgers Info Widget"></li>
+                <li><img src="assets/images/webdev.png" class="auth-image" alt="WebDev"></li>
+                <li><img src="assets/images/node.png" class="auth-image" alt="Node"></li>
+                <li><img src="assets/images/travel.png" class="auth-image" alt="Travel"></li>
+                <li><img src="assets/images/hobbies.png" class="auth-image" alt="Hobbies"></li>
             </ul>
         </section>
         <footer>
