--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 <htnml>
 
     <head>
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <title>My Portfolio Page</title>
     </head>
@@ -54,7 +56,7 @@
 
                     <div class="form-group">
                         <label for="exampleInputPassword1">Message</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter Message">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
